--- a/Test visualization here/PLOTLY IDEA/World_Happiness/templates/about.html
+++ b/Test visualization here/PLOTLY IDEA/World_Happiness/templates/about.html
@@ -34,9 +34,9 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="/" class="d-inline-block align-top"
                                 alt="Home">World Happiness: 2021</a></li>
-                        <li class="nav-item"><a class="nav-link" href="templates/about.html">About Us: Error 404</a>
+                        <li class="nav-item"><a class="nav-link" href="about.html">About Us: Error 404</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="templates/Nehir_leaflet.html" target="_blank">Nehir: Leaflet</a>
+                        <li class="nav-item"><a class="nav-link" href="Nehir_leaflet.html" target="_blank">Nehir: Leaflet</a>
                         </li>
                         <li class="nav-item"><a class="nav-link"
                                 href="https://github.com/yaparnehir/Final_Project" target="_blank">GitHub</a>
