--- a/Test visualization here/PLOTLY IDEA/World_Happiness/templates/Nehir_leaflet.html
+++ b/Test visualization here/PLOTLY IDEA/World_Happiness/templates/Nehir_leaflet.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    html,
+    body,
+    #mapid {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+    }
+</style>
 
 <head>
     <meta charset="UTF-8">
@@ -18,11 +28,28 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand|Bungee+Shade|Work+Sans&display=swap"
         rel="stylesheet">
 
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin="" />
+    <!-- Our CSS -->
+    <!-- <link rel="stylesheet" type="text/css" href="static/css/style.css"> -->
+    <!-- d3 JavaScript -->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+
 
 </head>
 
 <body>
+    <!-- The div that holds our map -->
+    <div id="mapid"></div>
+    <!-- Leaflet JavaScript -->
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+        integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+        crossorigin=""></script>
+    <!-- Our JavaScript -->
+    <script type="text/javascript" src="../static/js/config.js"></script>
 
+    <script type="text/javascript" src="../static/js/wh_report.js"></script>
+    <script type="text/javascript" src="../static/js/challenge_logic.js"></script>
 
 
 
