fixed leaflet error and page error

--- a/templates/Nehir_leaflet.html
+++ b/templates/Nehir_leaflet.html
@@ -46,7 +46,7 @@
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
         crossorigin=""></script>
     <!-- Our JavaScript -->
-    <script type="text/javascript" src="../static/js/config.js"></script>
+    <script type="text/javascript" src="../static/js/xconfig.js"></script>
 
     <script type="text/javascript" src="../static/js/wh_report.js"></script>
     <script type="text/javascript" src="../static/js/challenge_logic.js"></script>
